@@ -47,6 +47,7 @@ Version 1.0.8.2
      * Fixed a problem with tag and attribute names in XML highlighting (SF#2276119, BenBE)
      * Improved MySQL language file (BenBE, JavaWoman)
      * Some commentss accidentially mistaken for DocComments (SF#2454897, BenBE)
+     * Added improved Escape Char handling for c, c_mac, cpp and cpp_qt (SF#2458743, BenBE)
 Version 1.0.8.1
   -  Added language files
      * AviSynth (Ryan Jones)
